Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -20,7 +20,7 @@
     "account-length": "Długość subkonta",
     "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
-    "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
+    "account-parent-error": "Konto nadrzędne jest nieprawidłowe lub nie należy do bieżącego roku",
     "accounting": "Księgowość",
     "accounting-accounts": "Konta księgowe",
     "accounting-balance": "Saldo księgowe",
@@ -248,7 +248,7 @@
     "closed-exercise": "Ćwiczenie %exerciseName% jest zamknięte.",
     "closed-exercise-cant-change-date": "El ejercicio %exerciseName% está cerrado. No se puede modificar la fecha.",
     "closing-accounting-completed": "Rok obrachunkowy zakończony pomyślnie",
-    "closing-closing-concept": "Asiento de cierre del ejercicio %exercise%",
+    "closing-closing-concept": "Zamknięcie roku %exercise%",
     "closing-opening-concept": "Wprowadzenie otwierające ćwiczenie %exercise%",
     "closing-operation": "Zamknięcie",
     "closing-regularization-concept": "Ewidencja regulacyjna roku %exercise%",
@@ -278,11 +278,11 @@
     "common-error": "Błąd",
     "companies": "Empresas",
     "company": "Firma",
-    "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
+    "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
     "company-manager": "Administrator firmy",
     "company-name": "Nombre de empresa",
     "company-warehouse": "Firma\/Magazyn",
-    "comparative": "Comparativo",
+    "comparative": "Porównawczy",
     "compared": "Porównany",
     "compatible": "Kompatybilny",
     "completed": "Zakończony",
@@ -548,7 +548,7 @@
     "error-to-innodb": "Błąd podczas konwersji tabeli do InnoDB.",
     "error-updating-product-stock": "Błąd podczas aktualizacji stanu magazynowego produktu!",
     "errors": "Błędy",
-    "es_EC": "Español (Ecuador)",
+    "es_EC": "Hiszpański (Ekwador)",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -588,7 +588,7 @@
     "expedient": "Akta",
     "expense-subaccount": "Subcuenta para gastos bancarios",
     "expenses": "Wydatki",
-    "expiration": "Vencimiento",
+    "expiration": "Wygaszenie",
     "expiration-type": "Tipo de vencimiento",
     "expired": "Wygasły",
     "expired-receipt": "Wygasły paragon",
@@ -921,7 +921,7 @@
     "mailer": "Sterownik poczty",
     "main-address": "Główne adres",
     "manage": "Zarządzaj",
-    "manage-installation": "Administrar",
+    "manage-installation": "Zarządzaj",
     "manual": "Instrukcja obsługi",
     "manufacturer": "Producent",
     "manufacturer-code": "Código de fabricante",
@@ -949,7 +949,7 @@
     "menu": "Menu",
     "message": "Mensaje",
     "messages-component-title": "Komunikaty i wiadomości",
-    "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
+    "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
@@ -965,7 +965,7 @@
     "mobile": "Telefon komórkowy",
     "model": "Modelo",
     "model-not-found": "Model nie znaleziony: %model%",
-    "monday": "Lunes",
+    "monday": "Poniedziałek",
     "month": "Miesiąc",
     "month-1": "Enero",
     "month-10": "Octubre",
@@ -1007,7 +1007,7 @@
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
     "new-password": "Nueva contraseña",
     "new-price": "Nowa cena",
-    "new-refund": "Nueva devolución",
+    "new-refund": "Nowy zwrot",
     "new-supplier": "Nowy dostawca",
     "news": "Noticias",
     "next": "Następny",
@@ -1147,7 +1147,7 @@
     "please-enter-value": "Por favor, introduzca un valor para el campo",
     "plugin": "Plugin",
     "plugin-deleted": "Wtyczka %pluginName% została pomyślnie usunięta.",
-    "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
+    "plugin-disabled": "Wtyczka %pluginName% została pomyślnie wyłączona.",
     "plugin-enabled": "Wtyczka %pluginName% została pomyślnie włączona.",
     "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiuj plik do folderu wtyczek.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
@@ -1179,7 +1179,7 @@
     "previous-balance": "Poprzedni bilans",
     "previous-documents": "Dokumenty poprzednie",
     "previous-quarter": "Poprzedni kwartał",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
+    "previously-purchased-from-supplier": "Zakupione wcześniej od dostawcy",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Precio",
     "price-with-tax": "Precio + impuestos",
@@ -1332,7 +1332,7 @@
     "second-hand": "Używane",
     "second-quarter": "2º trimestre",
     "second-trimester": "Drugi trymestr",
-    "select": "Seleccionar",
+    "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
@@ -1382,12 +1382,12 @@
     "show": "Pokaż",
     "show-balance-graphic": "Mostrar gráficos en asientos",
     "show-crm-warnings": "Pokaż ostrzeżenia CRM",
-    "show-expired-receipts": "Mostrar recibos vencidos",
+    "show-expired-receipts": "Pokaż przeterminowane pokwitowania",
     "show-month-stats": "Pokaż statystyki miesięczne",
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Pokaż cenę w druku",
     "show-quantity": "Pokaż ilość w druku",
-    "show-section-new": "Pokaż nową sekcję",
+    "show-section-new": "Pokaż sekcję tworzenia",
     "signature": "Podpis",
     "simple": "Prosty",
     "simplified": "Uproszczona",
@@ -1423,7 +1423,7 @@
     "states": "Stany",
     "status": "Status",
     "status-document": "Stan dokumentu",
-    "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
+    "status-name-valid-length": "Nieprawidłowa nazwa statusu (musi zawierać od 1 do 20 znaków).",
     "status-value-is-number": "Pole statusu musi być liczbą.",
     "stock": "Zapas",
     "stock-transfer": "Transfer towarów",
@@ -1546,7 +1546,7 @@
     "total-with-taxes": "Całkowity + podatki",
     "totalirpf-value-error": "Nieprawidłowa łączna wartość IRPF %docType% %docCode% (%docTotalIRPF%). Poprawna wartość to: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
-    "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
+    "totallinea-value-error": "Błąd wartości totallinea w linii VAT podatku %taxCode% w fakturze. Prawidłowa wartość: %totalLine%",
     "totals": "Całkowite",
     "town": "Miejscowość",
     "tracking-code": "Código seguimiento",
