--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -366,7 +366,7 @@
     "customer-subaccount-p": "Indique a subconta em uso ou deixe em branco para gerar automaticamente",
     "customers": "clientes",
     "customize": "Personalizar",
-    "daily": "Daily",
+    "daily": "Diário",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
@@ -407,7 +407,7 @@
     "default-retention": "retenção-padrão",
     "default-role": "F",
     "default-tax": "Imposto padrão",
-    "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-company-email": "Por padrão para o e-mail da empresa",
     "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
@@ -473,7 +473,7 @@
     "document-sequence": "Sequência de documento",
     "document-sequences": "Sequências de documentos",
     "document-states": "Estados do documento",
-    "document-type": "Tipo documento",
+    "document-type": "Tipo de documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
     "document-without-total": "Documento %document% sem totais ou com o total a 0.",
@@ -487,7 +487,7 @@
     "dont-sell-below-cost": "Não venda abaixo o custo",
     "download": "download",
     "download-completed": "Download completado",
-    "download-error": "Error al descargar. Código %status% - %error%",
+    "download-error": "Erro ao baixar. Código %status% - %error%",
     "download-xml": "Descargar XML",
     "downloads": "descargas",
     "drag": "Arrastar",
@@ -579,7 +579,7 @@
     "exclude-valid": "Excluir válidos",
     "exempt": "Isentar",
     "exercise": "Exercício",
-    "exercise-date-out-range": "Date not in exercise range.",
+    "exercise-date-out-range": "A data não está no período do exercício.",
     "exercise-date-range-exists": "Já existe um exercício nesse intervalo de datas (%start% - %end%)",
     "exercise-not-found": "Exercício não encontrado.",
     "exercise-without-accounting-plan": "O",
@@ -700,7 +700,7 @@
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
-    "group-by-month-unixtime": "group-by-month-unixtime",
+    "group-by-month-unixtime": "Agrupar por mês (unixtime)",
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
@@ -894,7 +894,7 @@
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Entrar",
-    "login-cookie-fail": "O cookie da sessão falhou",
+    "login-cookie-fail": "Cookie de sessão inválida: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
     "login-password-fail": "Falha na autenticação",
@@ -1048,7 +1048,7 @@
     "number": "Número",
     "number-attachments": "Nº de anexos",
     "number-length": "Comprimento do número",
-    "number-recipients": "Nº perceptores",
+    "number-recipients": "Nº receptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Num. fornecedor",
@@ -1067,7 +1067,7 @@
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "Abertura de exercício concluída",
-    "opening-operation": "Apertura",
+    "opening-operation": "Abertura",
     "operation": "Operação",
     "operator": "Operador",
     "option": "Opção",
@@ -1139,7 +1139,7 @@
     "phone2": "Telefone 2",
     "phones": "Telefones",
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
-    "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
+    "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
     "picking": "Preparação",
@@ -1196,7 +1196,7 @@
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
-    "private-key": "Clave privada",
+    "private-key": "Chave privada",
     "process": "Proceso",
     "processing": "A processar",
     "product": "produtos",
@@ -1249,7 +1249,7 @@
     "record-updated-correctly": "Registro atualizado corretamente.",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "Fatura retificativa",
-    "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoice-p": "As faturas são documentos comerciais e têm uma série de restrições legais. Não podem ser eliminadas ou modificadas. Apenas são permitidas devoluções totais ou parciais. Utilize este formulário para fazer uma devolução sobre esta fatura.",
     "rectified-invoices": "Faturas retificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
@@ -1368,7 +1368,7 @@
     "server": "Servidor",
     "service": "Serviço",
     "services": "Serviços",
-    "settings": "Ajustes",
+    "settings": "Configurações",
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
@@ -1589,7 +1589,7 @@
     "update-stock": "Atualizar stock",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
-    "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Atualizador",
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funções.",
