--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1048,7 +1048,7 @@
     "number": "Número",
     "number-attachments": "Nº de anexos",
     "number-length": "Comprimento do número",
-    "number-recipients": "Nº perceptores",
+    "number-recipients": "Nº receptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Núm. fornecedor",
