Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -153,7 +153,7 @@
     "bank-mandate-date": "Data mandato bancario",
     "banking-movements": "Movimenti bancari",
     "barcode": "Codice a barre",
-    "bcc": "BCC",
+    "bcc": "CCO",
     "become-sponsor": "Diventa sponsor",
     "big": "grande",
     "billing": "Fatturazione",
