--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -192,7 +192,7 @@
     "cant-convert-to-innodb": "Não é possível converter a tabela '%tableName%' para InnoDB. Essencial para o FacturaScripts.",
     "cant-create-customer-subaccount": "Impossível criar a subconta para o cliente %customerCode%",
     "cant-create-folder": "Não é possível criar uma pasta %folderName%.",
-    "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
+    "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor %supplierCode%",
     "cant-delete-audit-log": "No se puede eliminar el registro de auditoría",
     "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
@@ -939,7 +939,7 @@
     "may": "Maio",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
-    "memcache-clear": "Memcache foi limpo.",
+    "memcache-clear": "Memcache foi limpa.",
     "memcache-delete-key-item": "Elemento excluído '%item%' do Memcache.",
     "memcache-get-key-item": "Obtido elemento '%item%' do Memcache.",
     "memcache-host": "Servidor Memcache",
@@ -966,7 +966,7 @@
     "model": "Modelo",
     "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
-    "month": "Mes",
+    "month": "Mês",
     "month-1": "Janeiro",
     "month-10": "Outubro",
     "month-11": "Novembro",
@@ -1261,7 +1261,7 @@
     "refund-amount": "Valor reembolsado",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
-    "register": "Registrar",
+    "register": "Registar",
     "register-install-ad": "Registre a instalação do FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "Registrar instalação",
@@ -1404,7 +1404,7 @@
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
-    "sorted-asc": "Ordenado ascendente",
+    "sorted-asc": "Ordenado de forma ascendente",
     "sorted-desc": "Ordenado decrescente",
     "source": "Fonte",
     "source-code": "Código fonte",
