--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -482,13 +482,13 @@
     "documents-generated": "documentos gerados",
     "domiciled": "Domiciliado",
     "done": "Feito",
-    "done-date": "Fecha finalización",
+    "done-date": "Data de conclusão",
     "dont-sell-above-pvp": "Não venda acima o preço de varejo",
     "dont-sell-below-cost": "Não venda abaixo o custo",
     "download": "download",
     "download-completed": "Download completado",
     "download-error": "Erro ao baixar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-xml": "Baixar XML",
     "downloads": "descargas",
     "drag": "Arrastar",
     "dto": "Disco.",
@@ -590,7 +590,7 @@
     "expenses": "Despesas",
     "expiration": "Expiração",
     "expiration-type": "Tipo de vencimento",
-    "expired": "expired",
+    "expired": "Expirado",
     "expired-receipt": "R",
     "export": "exportar",
     "export-bill": "Fatura de exportação",
@@ -647,7 +647,7 @@
     "foresee": "Prever",
     "format": "formato",
     "formula-cost-price": "preço de custo + x% + y",
-    "formula-sale-price": "formula-sale-price",
+    "formula-sale-price": "preço - x% - y",
     "formula-to-apply": "Fórmula para candidatar-se",
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto Trimestre",
@@ -759,7 +759,7 @@
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "O montante da entrada contabilística está incorreto.",
     "info": "Info",
-    "infostate-component-title": "Status Information",
+    "infostate-component-title": "Informação de Estado",
     "initial-number": "Número inicial",
     "insert-update": "Adicionar ou modificar",
     "installed": "Instalado",
@@ -902,7 +902,7 @@
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necessita identificar-se para continuar com esta ação. Clique em iniciar sessão ou crie uma conta.",
     "login-user-not-found": "Usuário não encontrado: %nick%",
-    "logo": "logo",
+    "logo": "Logotipo",
     "logout": "Sair",
     "logout-ok": "Sair com sucesso.",
     "logs": "Logs",
@@ -931,7 +931,7 @@
     "margin-top": "Topo da margem",
     "mark-as-homepage": "Marque como página inicial",
     "marked-as-homepage": "M",
-    "max-input-vars-warning": "max-input-vars-warning",
+    "max-input-vars-warning": "Com a configuração atual do PHP (max_input_vars) não poderá trabalhar com documentos de mais de %numlines% linhas.",
     "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo valor com CIF\/NIF",
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
@@ -1015,7 +1015,7 @@
     "no": "Não",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
-    "no-extra-lines": "no-extra-lines",
+    "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
     "no-outstanding-amount": "Não há valor pendente",
@@ -1174,7 +1174,7 @@
     "precio": "Prive",
     "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
-    "preview": "preview",
+    "preview": "Pré-visualizar",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
@@ -1185,7 +1185,7 @@
     "price-with-tax": "Preço + impostos",
     "principal": "a Principal",
     "print": "Impressão",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimir conta bancária",
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
@@ -1261,7 +1261,7 @@
     "refund-amount": "Quantidade devolvida",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
-    "register": "Registrar",
+    "register": "Registar",
     "register-install-ad": "Registar a instalação do FacturaScripts",
     "register-install-ad-p": "Se registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do core e do PHP.",
     "register-installation": "Registrar instalação",
@@ -1270,9 +1270,9 @@
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
     "regularization-operation": "Operação de regularização",
-    "reject": "Rechazar",
+    "reject": "Rejeitar",
     "rejected": "rejeitado",
-    "related": "related",
+    "related": "Relacionado",
     "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "Recarregando...",
@@ -1334,7 +1334,7 @@
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
-    "select-none": "select-none",
+    "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
     "selected-quantity": "Quantidade selecionada",
@@ -1373,7 +1373,7 @@
     "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
-    "shipping": "Shipping",
+    "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
     "shop": "Loja",
     "shops": "Lojas",
@@ -1412,7 +1412,7 @@
     "special-accounting-entries": "Lançamentos contabilísticos especiais",
     "special-accounts": "Contas especiais",
     "specials-actions": "Ações especiais",
-    "spreadsheet-xls": "Arquivo XLS",
+    "spreadsheet-xls": "Arquivo Excel",
     "standard": "Padrão",
     "start": "Início",
     "start-date": "Data de início",
@@ -1591,8 +1591,8 @@
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Atualizador",
-    "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funções.",
+    "updates-available": "Atualizações disponíveis",
+    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
@@ -1630,7 +1630,7 @@
     "video": "Vídeo",
     "vies-check-success": "O número '%vat-number%' está registado no sistema VIES",
     "view-api": "Ver API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Ver coluna subtotal ou neto",
     "view-estimation": "Ver orçamento",
     "view-order": "Ver encomenda",
     "warehouse": "Armazém",
@@ -1671,7 +1671,7 @@
     "years": "Anos",
     "yes": "Sim",
     "yesterday": "Ontem",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-cant-delete-primary-variant": "Não pode eliminar a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste um documento",
     "you-sent-a-location": "Você enviou uma localização",
