Actualizadas las traducciones

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1480,7 +1480,7 @@
     "suppliers": "Lieferanten",
     "support": "Unterstützung",
     "supported-tax-re-subaccount": "Unterkonto unterstützter Zuschlag",
-    "supported-tax-subaccount": "supported-tax-subaccount",
+    "supported-tax-subaccount": "Unterkonto für unterstützte Steuern",
     "surcharge": "Zuschlag",
     "surname": "Nachnamen",
     "suspended": "Suspendiert",
