--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -28,7 +28,7 @@
     "accounting-concept": "Koncepcja księgowa",
     "accounting-data-missing": "Nie znaleziono planu kont dla ćwiczenia %exerciseName%",
     "accounting-date": "Fecha de asiento",
-    "accounting-entries": "Asientos",
+    "accounting-entries": "Zapisy",
     "accounting-entry": "Wpis",
     "accounting-entry-date": "Data księgowania",
     "accounting-entry-macros-text": "<p>Możesz użyć specjalnych słów kluczowych (makr), aby automatycznie wypełnić informacje w polu opisu:<\/p><dl><dt>Nazwa dokumentu<\/dt><dd>Wpisz <strong>%document%<\/strong>, aby dodać identyfikator dokumentu.<\/dd><dt>Data bieżąca<\/dt><dd>Wpisz <strong>%date%<\/strong>, aby dodać bieżącą datę.<\/dd><dt>Data wprowadzenia<\/dt><dd>Wpisz <strong>%date-entry%<\/strong>, aby dodać datę wejścia do księgowania.<\/dd><dt>Miesiąc<\/dt><dd>Wpisz <strong>%month%<\/strong>, aby dodać nazwę miesiąca z daty księgowania.<\/dd><\/dl>",
@@ -239,7 +239,7 @@
     "cities": "Miasta",
     "city": "Miasto",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
-    "clone": "Duplicar",
+    "clone": "Duplikuj",
     "clone-account-entry": "Klonuj wpis księgowy",
     "close": "Cerrar",
     "close-box": "Zamknij pudełko",
@@ -626,7 +626,7 @@
     "finished": "Finalizado",
     "finished-cron": "Zakończono wykonywanie crona. Zużyty czas: %timeNeeded% sekund, Pamięć: %memoryUsed%",
     "first-quarter": "1. kwartał",
-    "first-steps": "Primeros pasos",
+    "first-steps": "Pierwsze kroki",
     "first-trimester": "Primer trimestre",
     "fiscal-data": "Dane fiskalne",
     "fiscal-exercise": "Ejercicio fiscal",
@@ -688,7 +688,7 @@
     "generated-products": "%quantity% wygenerowanych produktów.",
     "generated-subaccounts": "Wygenerowano %quantity% subkont księgowych.",
     "generated-supplier": "%quantity% dostawców wygenerowanych.",
-    "generated-supplier-delivery-notes": "%quantity% albaranes de compra generados.",
+    "generated-supplier-delivery-notes": "Wygenerowano %quantity% dokumentów zakupu.",
     "generated-supplier-estimations": "%quantity% presupuestos de proveedor generados.",
     "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
@@ -756,7 +756,7 @@
     "inactive": "Nieaktywny",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
-    "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
+    "incompatible-with-facturascripts": "Niekompatybilne z wersją %version% FacturaScripts",
     "incorrect-accounting-amount": "Kwota księgowania jest błędna.",
     "info": "Info",
     "infostate-component-title": "Informacja o stanie",
@@ -769,7 +769,7 @@
     "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
     "integrity-check": "Kontrola integralności",
     "integrity-check-help": "To jest sprawdzenie integralności systemu, opisane jako",
-    "interest": "Interés",
+    "interest": "Odsetki",
     "international-identifier": "Identyfikator międzynarodowy",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
@@ -940,9 +940,9 @@
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache wyczyszczone.",
-    "memcache-delete-key-item": "Eliminado elemento '%item%' de Memcache.",
+    "memcache-delete-key-item": "Usunięto element '%item%' z Memcache.",
     "memcache-get-key-item": "Pobrano element '%item%' z Memcache.",
-    "memcache-host": "Servidor Memcache",
+    "memcache-host": "Serwer Memcache",
     "memcache-port": "Port Memcache",
     "memcache-prefix": "Prefiks Memcache",
     "memcache-set-key-item": "Przypisano element '%item%' do Memcache.",
@@ -1181,10 +1181,10 @@
     "previous-quarter": "Poprzedni kwartał",
     "previously-purchased-from-supplier": "Zakupione wcześniej od dostawcy",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
-    "price": "Precio",
+    "price": "Cena",
     "price-with-tax": "Precio + impuestos",
     "principal": "Główny",
-    "print": "Imprimir",
+    "print": "Drukuj",
     "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Drukuj wszystkie rekordy",
     "print-export-options": "Opciones de imprimir y exportar",
@@ -1281,7 +1281,7 @@
     "removing-logs-until": "Usuwanie logów do %date%",
     "renew": "Odnów",
     "renumber": "Renumerar",
-    "renumber-accounting": "Renumerar Asientos",
+    "renumber-accounting": "Ponownie numeruj zapisy",
     "renumber-accounting-error": "Wystąpił błąd podczas renumeracji wpisów w roku podatkowym %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asientos completada",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
@@ -1603,7 +1603,7 @@
     "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
     "using-apc": "Używając pamięci podręcznej APC",
-    "using-filecache": "Usando Filecache",
+    "using-filecache": "Używając pamięci podręcznej plików",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido para un día",
     "validate": "Zatwierdź",
