--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1335,7 +1335,7 @@
     "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-none": "Selecionar nenhum",
-    "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
+    "select-plugin-zip-file": "Selecionar o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
     "selected-quantity": "Quantidade selecionada",
     "selector-number": "Seletor",
