--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -559,7 +559,7 @@
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Régimen especial da agricultura, pecuária e pesca",
     "es-tax-regime-exempt": "Isento",
-    "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-general": "Regime geral",
     "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
@@ -909,7 +909,7 @@
     "long": "Longo",
     "longitude": "Longitude",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Procurar lacunas",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
     "machine": "Máquina",
@@ -1037,7 +1037,7 @@
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "O %type% %number% não é válido",
     "not-valid-image": "Não é uma imagem válida",
-    "not-valid-percentage-retention": "Not valid percentage retention",
+    "not-valid-percentage-retention": "Percentagem de retenção inválida. Deve ser superior a 0.00",
     "note": "Nota",
     "notes": "Notas",
     "notice": "Aviso",
@@ -1661,7 +1661,7 @@
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "write-a-message-here": "Escreva uma mensagem aqui",
     "x-column": "coluna x",
     "x-operation": "Operação sobre X",
     "y-column": "Coluna Y",
